RESOLVED FIXED98441
FeatureObserver should distinguish between legacy HTML and text notifications
https://bugs.webkit.org/show_bug.cgi?id=98441
Summary FeatureObserver should distinguish between legacy HTML and text notifications
Adam Barth
Reported 2012-10-04 13:00:47 PDT
FeatureObserver should distinguish between legacy HTML and text notifications
Attachments
Patch (2.63 KB, patch)
2012-10-04 13:01 PDT, Adam Barth
no flags
Patch (4.13 KB, patch)
2012-10-04 13:05 PDT, Adam Barth
no flags
Patch for landing (2.45 KB, patch)
2012-10-04 19:23 PDT, Adam Barth
no flags
Patch for landing (2.63 KB, patch)
2012-10-04 22:26 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-10-04 13:01:39 PDT
Adam Barth
Comment 2 2012-10-04 13:05:21 PDT
Ojan Vafai
Comment 3 2012-10-04 14:31:23 PDT
Comment on attachment 167160 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=167160&action=review > Source/WebCore/Modules/notifications/NotificationCenter.idl:42 > + [V8Custom, V8MeasureAs=LegacyTextNotifications] Notification createNotification(in DOMString iconUrl, in DOMString title, in DOMString body) raises(DOMException); Are these really legacy? What has replaced them?
Adam Barth
Comment 4 2012-10-04 14:39:53 PDT
(In reply to comment #3) > (From update of attachment 167160 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=167160&action=review > > > Source/WebCore/Modules/notifications/NotificationCenter.idl:42 > > + [V8Custom, V8MeasureAs=LegacyTextNotifications] Notification createNotification(in DOMString iconUrl, in DOMString title, in DOMString body) raises(DOMException); > > Are these really legacy? What has replaced them? You just create notification using "new Notification" rather than going through the NotificationCenter factory.
Adam Barth
Comment 5 2012-10-04 19:23:30 PDT
Created attachment 167231 [details] Patch for landing
WebKit Review Bot
Comment 6 2012-10-04 21:58:24 PDT
Comment on attachment 167231 [details] Patch for landing Rejecting attachment 167231 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: rivedSources03.cpp:66: out/Release/obj/gen/webcore/bindings/V8NotificationCenter.cpp: In function 'v8::Handle<v8::Value> WebCore::NotificationCenterV8Internal::createNotificationCallback(const v8::Arguments&)': out/Release/obj/gen/webcore/bindings/V8NotificationCenter.cpp:70: error: 'LegacyTextNotificiations' is not a member of 'WebCore::FeatureObserver' make: *** [out/Release/obj.target/webcore_bindings/gen/webkit/bindings/V8DerivedSources03.o] Error 1 make: *** Waiting for unfinished jobs.... Full output: http://queues.webkit.org/results/14175387
Adam Barth
Comment 7 2012-10-04 22:26:46 PDT
Created attachment 167248 [details] Patch for landing
WebKit Review Bot
Comment 8 2012-10-04 23:01:53 PDT
Comment on attachment 167248 [details] Patch for landing Clearing flags on attachment: 167248 Committed r130463: <http://trac.webkit.org/changeset/130463>
WebKit Review Bot
Comment 9 2012-10-04 23:01:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.