FeatureObserver should distinguish between legacy HTML and text notifications https://bugs.webkit.org/show_bug.cgi?id=98441

Reviewed by Tony Chang.

We might be able to drop support for legacy HTML notifications before
we can drop support for legacy text notifications. We should measure
and find out.

* Modules/notifications/NotificationCenter.idl:
* page/FeatureObserver.h:


Canonical link: https://commits.webkit.org/116457@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130463 268f45cc-cd09-0410-ab3c-d52691b4dbfc