Source/WebCore/page/FeatureObserver.h
@@ -50,6 +50,8 @@ public:
         PrefixedContentSecurityPolicy,
         UnprefixedIndexedDB,
         OpenWebDatabase,
+        LegacyHTMLNotifications,
+        LegacyTextNotifications,
         // Add new features above this line.
         NumberOfFeatures, // This enum value must be last.
     };
